--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
 <html lang="ja">
- <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet"type="text/css"href="css/default.css">
-  <title>おいしいカレーの作り方</title>
- </head>
- <body>
-  <article id="main">
-    <p>コンビニに行きます。</p>
-  </article>
- </body>
-</html>
+  <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="css/default.css">
+    <title>おいしいカレーの作り方</title>
+   </head>
+   <body>
+    <article id="main">
+     <p>コンビニに行きます</p>
+     <section class="curry_picture">
+       <img src="img/curry.png" alt="完成したカレー" width=300 class="photo">
+       <dl>
+          <dt>種類:</dt><dd>ポークカレー(ゴロゴロしたジャガイモとにんじん入り)</dd>
+          <dt>辛さ:</dt><dd>3辛</dd>
+       </dl>
+      <table id="ingredient">
+       <tr><th>ジャガイモ</th><td>3個</td></tr>
+       <tr><th>ニンジン</th><td>1本</td></tr>
+       <tr><th>豚ブロック</th><td>300g</td></tr>
+       <tr><th>カレー粉</th><td>1箱</td></tr>
+      </table>
+     </section>  
+    </article>
+   </body>
+  </html>
